# backend

./: .gitignore  Dockerfile  QueryRouteWithServerPagination.md  README.md  generate_data.py  generate_data2.py  pyproject.toml  scripts.py
app/: main.py
app/api/: routes.py
app/utils/: helpers.py
database/: Dockerfile  custom-config.xml  init-db.sh  init-db.sql
database/scripts/: build-image-mac.sh  build-image.sh  clickhouse-setup-mac.sh  clickhouse-setup.sh  kill-docker.sh
scripts/: build-flask-image.sh  global-vars.sh
scripts/development/: build-image-mac.sh  build-image.sh  clickhouse-setup-mac.sh  clickhouse-setup.sh  global-vars.sh  kill-docker.sh
tests/: test_config.py  test_main.py
