[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
start-db = "scripts:start_db"
build-image = "scripts:build_image"

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-connect = "^0.7.16"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"
docker = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


