[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.scripts]
start-db = "scripts:start_db"
start-db-mac = "scripts:start_db_mac"
build-image = "scripts:build_image"
build-image-mac = "scripts:build_image_mac"
build-flask-image = "scripts:build_flask_image"
dev = "scripts:run_dev"
generate = "scripts:generate_data"

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-connect = "^0.7.16"
python-dotenv = "^1.0.1"
flask = "^3.0.3"
flask-cors = "^4.0.1"
boto3 = "^1.34.143"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
isort = "^5.13.2"
docker = "^7.1.0"
faker = "^26.0.0"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


